<resources>
    <string name="app_name">Rest Api </string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="third">Get Data</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment"> Hello </string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="exit_option"> Exit </string>
    <string name="settings_option"> Settings </string>
    <string name="fab_message">Hi guys how are you</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">ID</string>
    <string name="user_id">User ID</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="textview">TextView</string>

</resources>