<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="194dp"
        tools:layout_editor_absoluteY="30dp">

        <TextView
            android:id="@+id/idTitle"
            android:layout_width="10sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/id"
            android:textColor="#FAF9FB"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingLeft="10sp"
            android:paddingBottom="10sp"/>

        <TextView
            android:id="@+id/id"
            android:layout_width="10sp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/textview"
            android:textColor="#FAF9FB"
            android:textSize="15sp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:paddingBottom="10sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="194dp"
        tools:layout_editor_absoluteY="30dp">
        <TextView
            android:id="@+id/useridTitle"
            android:layout_width="10sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_id"
            android:textColor="#FAF9FB"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingLeft="10sp"
            android:paddingBottom="10sp"/>


        <TextView
            android:id="@+id/userid"
            android:layout_width="10sp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/textview"
            android:textColor="#FAF9FB"
            android:textSize="15sp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:paddingBottom="10sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="194dp"
        tools:layout_editor_absoluteY="30dp">
        <TextView
            android:id="@+id/titleTitle"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title"
            android:textColor="#FAF9FB"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingLeft="10sp"
            android:paddingBottom="10sp"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/textview"
            android:textColor="#FAF9FB"
            android:textSize="15sp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:paddingBottom="10sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="194dp"
        tools:layout_editor_absoluteY="30dp">
        <TextView
            android:id="@+id/bodyTitle"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/body"
            android:textColor="#FAF9FB"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingLeft="10sp"
            android:paddingBottom="10sp"/>

        <TextView
            android:id="@+id/body"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/textview"
            android:textColor="#FAF9FB"
            android:textSize="15sp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:paddingBottom="10sp"/>
    </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>